// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: TypeaheadSingle ui with value: Component: TypeaheadSingle => ui => with value 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best friend
  </Label>
  <div
    className=""
  >
    <asyncContainer(TypeaheadComponent)
      delay={200}
      id="bestFriend"
      inputProps={
        Object {
          "className": "form-control",
        }
      }
      isLoading={false}
      labelKey="label"
      minLength={2}
      multiple={false}
      onChange={[Function]}
      onSearch={[Function]}
      options={Array []}
      placeholder="Please provide your best friend"
      promptText="Type to search..."
      searchText="Searching..."
      selected={
        Array [
          Object {
            "label": "admin@42.nl",
            "value": Object {
              "active": true,
              "email": "admin@42.nl",
              "id": 42,
              "roles": Array [
                "ADMIN",
              ],
            },
          },
        ]
      }
      useCache={true}
    />
  </div>
  Some error
</FormGroup>
`;

exports[`Component: TypeaheadSingle ui without label: Component: TypeaheadSingle => ui => without label 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <div
    className=""
  >
    <asyncContainer(TypeaheadComponent)
      delay={200}
      inputProps={
        Object {
          "className": "form-control",
        }
      }
      isLoading={false}
      labelKey="label"
      minLength={2}
      multiple={false}
      onChange={[Function]}
      onSearch={[Function]}
      options={Array []}
      placeholder="Please provide your best friend"
      promptText="Type to search..."
      searchText="Searching..."
      selected={
        Array [
          Object {
            "label": "admin@42.nl",
            "value": Object {
              "active": true,
              "email": "admin@42.nl",
              "id": 42,
              "roles": Array [
                "ADMIN",
              ],
            },
          },
        ]
      }
      useCache={true}
    />
  </div>
  Some error
</FormGroup>
`;

exports[`Component: TypeaheadSingle ui without placeholder: Component: TypeaheadSingle => ui => without placeholder 1`] = `
<FormGroup
  className=""
  tag="div"
>
  <Label
    for="bestFriend"
    tag="label"
    widths={
      Array [
        "xs",
        "sm",
        "md",
        "lg",
        "xl",
      ]
    }
  >
    Best friend
  </Label>
  <div
    className=""
  >
    <asyncContainer(TypeaheadComponent)
      delay={200}
      id="bestFriend"
      inputProps={
        Object {
          "className": "form-control",
        }
      }
      isLoading={false}
      labelKey="label"
      minLength={2}
      multiple={false}
      onChange={[Function]}
      onSearch={[Function]}
      options={Array []}
      promptText="Type to search..."
      searchText="Searching..."
      selected={
        Array [
          Object {
            "label": "admin@42.nl",
            "value": Object {
              "active": true,
              "email": "admin@42.nl",
              "id": 42,
              "roles": Array [
                "ADMIN",
              ],
            },
          },
        ]
      }
      useCache={true}
    />
  </div>
  Some error
</FormGroup>
`;
